--- a/index.css
+++ b/index.css
@@ -30,10 +30,167 @@ html, body{
 .word{
   font-family: sans-serif;
   font-weight: bold;
-}
-.T{
-  left: 368px;
   font-size: 44px;
+}
+
+.C1{
+  left: 502px;
+  top: 339px;
+  transform: rotate(165deg);
+  -moz-transform: rotate(165deg);
+  -webkit-transform: rotate(165deg);
+  -o-transform: rotate(165deg);
+  -ms-transform: rotate(165deg);
+}
+.C2{
+  left: 385px;
+  top: 318px;
+  transform: rotate(213deg);
+  -moz-transform: rotate(213deg);
+  -webkit-transform: rotate(213deg);
+  -o-transform: rotate(213deg);
+  -ms-transform: rotate(213deg);
+}
+.E1{
+  left: 628px;
+  top: 103px;
+  transform: rotate(67deg);
+  -moz-transform: rotate(67deg);
+  -webkit-transform: rotate(67deg);
+  -o-transform: rotate(67deg);
+  -ms-transform: rotate(67deg);
+}
+.E2{
+  left: 452px;
+  top: 340px;
+  transform: rotate(188deg);
+  -moz-transform: rotate(188deg);
+  -webkit-transform: rotate(188deg);
+  -o-transform: rotate(188deg);
+  -ms-transform: rotate(188deg);
+}
+.E3{
+  left: 362px;
+  top: 301px;
+  transform: rotate(221deg);
+  -moz-transform: rotate(221deg);
+  -webkit-transform: rotate(221deg);
+  -o-transform: rotate(221deg);
+  -ms-transform: rotate(221deg);
+}
+.s1 {
+  font-size: 39px !important;
+  left: 332.2px;
+  top: 78px;
+  transform: rotate(123deg);
+  -moz-transform: rotate(123deg);
+  -webkit-transform: rotate(123deg);
+  -o-transform: rotate(123deg);
+  -ms-transform: rotate(123deg);
+  font-size: 51px;
+}
+.i1 {
+  font-size: 39px !important;
+  left: 329.2px;
+  top: 93px;
+  transform: rotate(117deg);
+  -moz-transform: rotate(117deg);
+  -webkit-transform: rotate(117deg);
+  -o-transform: rotate(117deg);
+  -ms-transform: rotate(117deg);
+  font-size: 49px;
+}
+.n1 {
+  font-size: 39px !important;
+  left: 314.2px;
+  top: 111px;
+  transform: rotate(113deg);
+  -moz-transform: rotate(113deg);
+  -webkit-transform: rotate(113deg);
+  -o-transform: rotate(113deg);
+  -ms-transform: rotate(113deg);
+  font-size: 51px;
+}
+.e1{
+  font-size: 39px;
+  left: 305px;
+  top: 156px;
+  transform: rotate(91deg);
+  -moz-transform: rotate(91deg);
+  -webkit-transform: rotate(91deg);
+  -o-transform: rotate(91deg);
+  -ms-transform: rotate(91deg);
+}
+.c1{
+  font-size: 39px;
+  left: 308px;
+  top: 134px;
+  transform: rotate(98deg);
+  -moz-transform: rotate(98deg);
+  -webkit-transform: rotate(98deg);
+  -o-transform: rotate(98deg);
+  -ms-transform: rotate(98deg);
+}
+.F1{
+  left: 572px;
+  top: 310px;
+  transform: rotate(144deg);
+  -moz-transform: rotate(144deg);
+  -webkit-transform: rotate(144deg);
+  -o-transform: rotate(144deg);
+  -ms-transform: rotate(144deg);
+}
+.I1{
+  font-size: 43px;
+  left: 605px;
+  top: 54px;
+  transform: rotate(47deg);
+  -moz-transform: rotate(47deg);
+  -webkit-transform: rotate(47deg);
+  -o-transform: rotate(47deg);
+  -ms-transform: rotate(47deg);
+}
+.I2{
+  font-size: 43px;
+  left: 649px;
+  top: 194px;
+  transform: rotate(98deg);
+  -moz-transform: rotate(98deg);
+  -webkit-transform: rotate(98deg);
+  -o-transform: rotate(98deg);
+  -ms-transform: rotate(98deg);
+}
+.I3{
+  font-size: 43px;
+  left: 487px;
+  top: 342px;
+  transform: rotate(178deg);
+  -moz-transform: rotate(178deg);
+  -webkit-transform: rotate(178deg);
+  -o-transform: rotate(178deg);
+  -ms-transform: rotate(178deg);
+}
+.N1{
+  left: 572px;
+  top: 33px;
+  transform: rotate(36deg);
+  -moz-transform: rotate(36deg);
+  -webkit-transform: rotate(36deg);
+  -o-transform: rotate(36deg);
+  -ms-transform: rotate(36deg);
+}
+.N2{
+  left: 417px;
+  top: 332px;
+  transform: rotate(18deg);
+  -moz-transform: rotate(18deg);
+  -webkit-transform: rotate(18deg);
+  -o-transform: rotate(18deg);
+  -ms-transform: rotate(18deg);
+}
+
+.T1{
+  left: 368px;
   top: 36px;
   transform: rotate(-39deg);
   -moz-transform: rotate(-39deg);
@@ -41,9 +198,26 @@ html, body{
   -o-transform: rotate(-39deg);
   -ms-transform: rotate(-39deg);
 }
-.O{
+.T2{
+  left: 634px;
+  top: 219px;
+  transform: rotate(106deg);
+  -moz-transform: rotate(106deg);
+  -webkit-transform: rotate(106deg);
+  -o-transform: rotate(106deg);
+  -ms-transform: rotate(106deg);
+}
+.U1{
+  left: 539px;
+  top: 15px;
+  transform: rotate(26deg);
+  -moz-transform: rotate(26deg);
+  -webkit-transform: rotate(26deg);
+  -o-transform: rotate(26deg);
+  -ms-transform: rotate(26deg);
+}
+.O1{
   left: 393.2px;
-  font-size: 44px;
   top: 18px;
   transform: rotate(-24deg);
   -moz-transform: rotate(-24deg);
@@ -51,7 +225,209 @@ html, body{
   -o-transform: rotate(-24deg);
   -ms-transform: rotate(-24deg);
 }
+.O2{
+  left: 492px;
+  top: 0.3px;
+  transform: rotate(3deg);
+  -moz-transform: rotate(3deg);
+  -webkit-transform: rotate(3deg);
+  -o-transform: rotate(3deg);
+  -ms-transform: rotate(3deg);
+}
+.O3{
+  left: 595px;
+  top: 288px;
+  transform: rotate(-36deg);
+  -moz-transform: rotate(-36deg);
+  -webkit-transform: rotate(-36deg);
+  -o-transform: rotate(-36deg);
+  -ms-transform: rotate(-36deg);
+}
+.R1{
+  left: 635px;
+  top: 134px;
+  transform: rotate(77deg);
+  -moz-transform: rotate(77deg);
+  -webkit-transform: rotate(77deg);
+  -o-transform: rotate(77deg);
+  -ms-transform: rotate(77deg);
+}
+.S1{
+  left: 641px;
+  top: 167px;
+  transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+}
+.S2{
+  left: 535px;
+  top: 330px;
+  transform: rotate(160deg);
+  -moz-transform: rotate(160deg);
+  -webkit-transform: rotate(160deg);
+  -o-transform: rotate(160deg);
+  -ms-transform: rotate(160deg);
+}
+.K1{
+  left: 429.2px;
+  top: 4px;
+  transform: rotate(-15deg);
+  -moz-transform: rotate(-15deg);
+  -webkit-transform: rotate(-15deg);
+  -o-transform: rotate(-15deg);
+  -ms-transform: rotate(-15deg);
+}
+.Y1{
+  left: 460.2px;
+  top: 0px;
+  transform: rotate(-4deg);
+  -moz-transform: rotate(-4deg);
+  -webkit-transform: rotate(-4deg);
+  -o-transform: rotate(-4deg);
+  -ms-transform: rotate(-4deg);
+}
+.Y2{
+  left: 621px;
+  top: 248px;
+  transform: rotate(118deg);
+  -moz-transform: rotate(118deg);
+  -webkit-transform: rotate(118deg);
+  -o-transform: rotate(118deg);
+  -ms-transform: rotate(118deg);
+}
+.V1{
+  left: 611.2px;
+  top: 76px;
+  transform: rotate(55deg);
+  -moz-transform: rotate(55deg);
+  -webkit-transform: rotate(55deg);
+  -o-transform: rotate(55deg);
+  -ms-transform: rotate(55deg);
+}
+.num1-1{
+  font-family: serif;
+  left: 303px;
+  top: 193px;
+  font-size: 39px;
+  transform: rotate(84deg);
+  -moz-transform: rotate(84deg);
+  -webkit-transform: rotate(84deg);
+  -o-transform: rotate(84deg);
+  -ms-transform: rotate(84deg);
+}
+.num1-2{
+  font-family: serif;
+  left: 329px;
+  top: 266px;
+  font-size: 39px;
+  transform: rotate(57deg);
+  -moz-transform: rotate(57deg);
+  -webkit-transform: rotate(57deg);
+  -o-transform: rotate(57deg);
+  -ms-transform: rotate(57deg);
+}
+.num8-1{
+  font-family: serif;
+  left: 308px;
+  top: 218px;
+  font-size: 39px;
+  transform: rotate(76deg);
+  -moz-transform: rotate(76deg);
+  -webkit-transform: rotate(76deg);
+  -o-transform: rotate(76deg);
+  -ms-transform: rotate(76deg);
+}
+.num8-2{
+  font-family: serif;
+  left: 316px;
+  top: 243px;
+  font-size: 39px;
+  transform: rotate(69deg);
+  -moz-transform: rotate(69deg);
+  -webkit-transform: rotate(69deg);
+  -o-transform: rotate(69deg);
+  -ms-transform: rotate(69deg);
+}
 /*-------------たいへい-------------*/
 /*-------------がっ死ー-------------*/
+.arc-r {
+  transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -webkit-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  width: 40px;
+  height: 242px;
+  left: 545px;
+  z-index: 5;
+  top: 82px;
+  border-radius: 400% 20000000% 20000001% 4000%;
+  border-right: 15px solid;
+}
+.arc-l {
+  transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  width: 40px;
+  height: 242px;
+  left: 376px;
+  z-index: 5;
+  top: 82px;
+  border-radius: 400% 20000000% 20000001% 4000%;
+  border-right: 15px solid;
+}
+.arc-t {
+  transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  width: 40px;
+  height: 242px;
+  left: 461px;
+  z-index: 5;
+  top: -2px;
+  border-radius: 400% 20000000% 20000001% 4000%;
+  border-right: 15px solid;
+}
+.arc-b {
+  transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  width: 40px;
+  height: 242px;
+  left: 461px;
+  z-index: 5;
+  top: 168px;
+  border-radius: 400% 20000000% 20000001% 4000%;
+  border-right: 15px solid;
+}
 /*-------------みっつー-------------*/
+.bigCircle {
+  position: absolute;
+  width: 261px;
+  height: 266px;
+  left: 346px;
+  top: 58px;
+  z-index: 5;
+  border-radius: 155px;
+  border: solid 12px red;
+}
 /*-------------なおこさん-------------*/
+.circle {
+  position: absolute;
+  width: 96px;
+  height: 98px;
+  background-color: red;
+  background-color: red;
+  border-radius: 50px 50px;
+  z-index: 5;
+  top: 155px;
+  left: 441px;
+}
